--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -23,11 +23,13 @@
   <title>Document</title>
 </head>
 <body>
-  <div id="root"></div>
   <script type="module">
+    const root = document.createElement('div');
+    root.id = 'root';
+    document.body.appendChild(root);
     const div = document.createElement('div');
     div.textContent = 'Hello word';
-    document.getElementById('root').appendChild(div);
+    root.appendChild(div);
   </script>
 </body>
 </html>
