--- a/src/exercise/02.html
+++ b/src/exercise/02.html
@@ -1,6 +1,3 @@
-<!-- Intro to raw React APIs -->
-<!-- http://localhost:3000/isolated/exercise/02.html -->
-
 <body>
   <div id="root"></div>
 
@@ -9,7 +6,7 @@
 
   <script type="module">
 
-    const rootElement = document.getElementById('root')
+    const rootElement = document.getElementById('root');
     const element = React.createElement('div', {
       className: 'container',
       children: [
@@ -17,10 +14,8 @@
         React.createElement('span', null, 'World')
       ],
     })
-    ReactDOM.render(element, rootElement)
 
-    // 🐨 Please re-implement the regular document.createElement code above
-    // with these React API calls
-    // 💰 The example in the markdown file should be a good hint for you.
+    ReactDOM.render(element, rootElement);
+
   </script>
 </body>
