--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -1,6 +1,3 @@
-<!-- Creating custom components -->
-<!-- http://localhost:3000/isolated/exercise/04.html -->
-
 <body>
   <div id="root"></div>
   <script src="https://unpkg.com/react@17.0.0/umd/react.development.js"></script>
@@ -10,26 +7,23 @@
   <script type="text/babel">
 
 
-    // 🐨 Make a function called `message` which returns the JSX we want to share
-    function Message({greeting, subject}) {
+  function Message({greeting, subject}) {
       return <div className="message">{greeting}, {subject}</div>
     }
 
     Message.propTypes = {
       subject: PropTypes.string.isRequired,
       greeting: PropTypes.string.isRequired,
-    }
+    };
 
-    // 🐨 use that function in place of the divs below with:
-    // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
     const element = (
       <>
         <Message greeting='Hello' subject='World' />
         <Message greeting='Goodbye' subject='World' />
       </>
-    )
+    );
 
-    // 💯 This is only the first step to making actual React components. The rest is in the extra credit!
-    ReactDOM.render(element, document.getElementById('root'))
+    ReactDOM.render(element, document.getElementById('root'));
+
   </script>
 </body>
